--- a/starBackend/.env
+++ b/starBackend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://EmmanuelBos:b125%40sah@cluster0.aoatdtv.mongodb.net/clinicDetails?retryWrites=true&w=majority
 EMAIL_USERNAME=
 EMAII_PASSWORD=
+JWT_SECRET=7qKXUnkMcAQJRy0i3ARlAv4Rdxga5Nk3
