added some features to the site

--- a/starBackend/.env
+++ b/starBackend/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://EmmanuelBos:b125%40sah@cluster0.aoatdtv.mongodb.net/clin
 EMAIL_USERNAME=
 EMAII_PASSWORD=
 JWT_SECRET=7qKXUnkMcAQJRy0i3ARlAv4Rdxga5Nk3
+JWT_EXPIRY=24h
