--- a/starBackend/package.json
+++ b/starBackend/package.json
@@ -14,12 +14,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.19",
+    "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
