worked on useremail authentication and fixed some errors

--- a/starBackend/.env
+++ b/starBackend/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://EmmanuelBos:b125%40sah@cluster0.aoatdtv.mongodb.net/clinicDetails?retryWrites=true&w=majority
-EMAIL_USERNAME=af34aeffae2bee
-EMAII_PASSWORD=270bec07e9c058
+EMAIL_USERNAME="generalproject4@gmail.com"
+EMAII_PASSWORD="zhqlylbhbcckreyc"
 JWT_SECRET=7qKXUnkMcAQJRy0i3ARlAv4Rdxga5Nk3
 JWT_EXPIRY=24h
